<resources>
    <string name="app_name">DDC Toolbox</string>
    <string name="filter_type_prompt">Filter type</string>
    <string name="filter_type_hint">Select a filter type</string>
    <string name="filter_type">Filter Type</string>
    <string name="frequency_hint">0~24000Hz</string>
    <string name="frequency">Frequency</string>
    <string name="bandwidth">Bandwidth</string>
    <string name="slope_hint">0.001~100.0</string>
    <string name="slope">Slope</string>
    <string name="gain_hint">-40.0~40.0dB</string>
    <string name="bandwidth_hint">0.0~100.0</string>
    <string name="gain">Gain</string>
    <string name="save_filter">Save</string>
    <string name="edit_filter">Edit filter</string>
    <string name="filter_stability">Filter stability</string>
    <string name="plot_axis_frequency">Frequency (Hz)</string>
    <string name="plot_axis_gain">Gain (dB)</string>
    <string name="add_filter">Add filter</string>
    <string name="plot_axis_phase">Phase (deg)</string>
    <string name="plot_axis_delay">Delay (ms)</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="category_plots">Plots</string>
    <string name="magnitude_response">Magnitude Response</string>
    <string name="phase_response">Phase Response</string>
    <string name="group_delay">Group Delay</string>
    <string name="plot_none">None</string>
    <string name="editor_invalid_filter_dialog">Please select a valid filter type.</string>
    <string name="editor_invalid_filter_dialog_title">Invalid type</string>
    <string name="editor_invalid_input">Invalid input</string>
    <string name="editor_missing_input">Missing input</string>
    <string name="filter_stablity_unknown">Unknown stability state</string>
    <string name="filter_stablity_stable">Filter appears to be stable</string>
    <string name="filter_stablity_pole_outside_unit_circle">Fatal error: Pole of %1$s at %2$dHz outside the unit circle</string>
    <string name="filter_stablity_pole_approaching_unit_circle">Warning: Pole of %1$s at %2$dHz approaching to unit circle</string>
    <string name="filter_stablity_pole_simple_outside_unit_circle">Fatal error: Pole of %1$s outside the unit circle</string>
    <string name="filter_stablity_pole_simple_approaching_unit_circle">Warning: Pole of %1$s approaching to unit circle</string>
    <string name="nothing_to_redo">Nothing to redo</string>
    <string name="nothing_to_undo">Nothing to undo</string>
    <string name="delete_filter">Delete filter</string>
    <string name="save_project">Save Project</string>
    <string name="export_vdc">Export VDC</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_as">Save as…</string>
    <string name="menu_export_as_vdc">Export as VDC</string>
    <string name="select_directory">Select directory</string>
    <string name="invalid_path">Invalid path</string>
    <string name="directory_not_found">Directory does not exist</string>
    <string name="prompt_enter_project_name">Please enter a project name</string>
    <string name="project_name">Filename</string>
    <string name="vdc_name">VDC Name</string>
    <string name="directory">Directory</string>
    <string name="browse_for_directory">Browse</string>
    <string name="toast_project_saved">Project has been saved</string>
    <string name="toast_project_not_saved">Unable to save project.\nPlease select another output directory using \'Save as…\'</string>
    <string name="untitled">Untitled</string>
    <string name="load_project_file">Load project file</string>
    <string name="close_project">Close Project</string>
    <string name="close_project_notice">Do you want to close the current project?\nThis operation will erase all unsaved data!</string>
    <string name="feature_unavailable">Feature unavailable</string>
    <string name="custom_filter_notice">Please use the desktop version of DDC Toolbox to edit custom filters.\nThis app can still handle custom filters!\nProjects containing these filters are still parsed correctly and can be inspected/deleted/exported without any issue.</string>
    <string name="empty_project">Empty project</string>
    <string name="note_empty_project">This project is empty\nPlease add some filters first!</string>
    <string name="no_filters">No filters</string>
    <string name="tutorial_step1_title">Welcome!</string>
    <string name="tutorial_step2_title">Filter List</string>
    <string name="tutorial_step3_title">Project Management</string>
    <string name="tutorial_step4_title">Basic Actions</string>
    <string name="tutorial_step5_title">Plots</string>
    <string name="tutorial_end_title">That\'s it!</string>
    <string name="tutorial_step1">This application is capable of creating VDC files for Viper and JamesDSP.</string>
    <string name="tutorial_step2">Tap on one item to expand it.\nYou can inspect, edit and delete each entry</string>
    <string name="tutorial_step3">Load, save, close and export your project in this area</string>
    <string name="tutorial_step4">Add new filters and undo/redo changes</string>
    <string name="tutorial_step5">Select between three plots to display</string>
    <string name="tutorial_end">You\'ve completed the tutorial.\nI\'ll leave you alone now, have fun!</string>
    <string name="permission_missing">Permission not granted</string>
    <string name="permission_missing_description">Cannot continue. Please relaunch this app and accept all permission prompts</string>
    <string name="permission_rationale_description">Please grant this app storage permissions to save, load and export projects.</string>
    <string name="permission_rationale">Permission required</string>
    <string name="section_about">About</string>
    <string name="credits">Credits</string>
    <string name="credits_description"><![CDATA[Create and edit VDC files on Android devices<br/>Author: <b>@ThePBone</b><br/>Contributor: <b>@james34602</b>]]></string>
    <string name="license">License</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="menu_deploy_vdc">Deploy to Viper/JamesDSP</string>
    <string name="deploy_jamesdsp">JamesDSP</string>
    <string name="deploy_viper4android_legacy">Viper4Android (Legacy)</string>
    <string name="deploy_viper4android_new_scoped">Viper4Android (Version 2.7.1.5 or later)</string>
    <string name="deploy_no_target">No target selected</string>
    <string name="deploy_no_target_desc">Please select at least one deployment target.</string>
    <string name="menu_load_project">Load project</string>
    <string name="menu_import_from_autoeq">Import AutoEQ file</string>
    <string name="select_autoeq_file_dialog_title">Select a \"ParametricEQ.txt\" file</string>
    <string name="autoeq_import_no_data_title">No valid data found</string>
    <string name="autoeq_import_no_data">The selected file contained no valid data.\n%1$d error(s) occurred while converting this file.</string>
    <string name="autoeq_import_skipped_warning">The parser skipped %1$d line(s) that contained unknown/invalid data</string>
    <string name="autoeq_import_skipped_warning_title">Imported with warnings</string>
    <string name="category_utilities">Utilities</string>
    <string name="check_filter_stability">Check filter stability</string>
    <string name="filter_stability_all_stable">All filters appear to be stable</string>
    <string name="filter_stability_report_title">Filter stability report</string>

    <string name="autoeq_search_introduction">Enter a device name…</string>
    <string name="menu_download_from_autoeq">Download from AutoEQ</string>
    <string name="menu_search">Search</string>
    <string name="no_results_found">No results found</string>
    <string name="autoeq_error_rate_limit_title">Rate limit exceeded</string>
    <string name="autoeq_error_rate_limit">You are being rate-limited by GitHub.\nGitHub only allows 60 unauthenticated requests per hour to their API servers (per IP-address).\n\nPlease wait until this limit expires or download and import the file manually.\n\n(This only affects the download URL grabber, you can perform unlimited search queries.)</string>
    <string name="autoeq_error_general_api_title">GitHub API Error</string>
    <string name="autoeq_error_invalid_response_title">Invalid API response</string>
    <string name="autoeq_error_invalid_response">GitHub returned malformed JSON data</string>
    <string name="autoeq_error_download_failed_title">Download failed</string>
    <string name="autoeq_error_download_failed">Failed to download the ParametricEQ.txt file from GitHub</string>
    <string name="autoeq_error_empty_response_title">No suitable data found</string>
    <string name="autoeq_error_empty_response">Your selection has no ParametricEQ.txt file available or returned an empty response</string>
    <string name="autoeq_error_network_title">Network error</string>
</resources>
