<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/directoryInput"
            android:hint="@string/directory"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="0.9"
            android:layout_marginStart="6dp"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:singleLine="true" />

        <Button
            android:id="@+id/browseOutDirectory"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_for_directory" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:hint="@string/project_name"
            android:id="@+id/projectNameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:singleLine="true" />

        <Button
            android:id="@+id/saveNow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/save_filter" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </TableRow>
</TableLayout>